# turbo-png

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
src/: cli.rs  compressor.rs  main.rs  optimizer.rs  pipeline.rs  ui.rs
tests/: chunk_preservation.rs  error_paths.rs  happy_paths.rs  input_handling.rs  metadata_and_progress.rs
tests/fixtures/: mod.rs
