[package]
name = "png-compressor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
oxipng = { version = "9.0", default-features = false, features = ["parallel", "zopfli"] }
imagequant = "4.2"
png = "0.17"
rayon = "1.10"
walkdir = "2.5"
tempfile = "3.12"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
